[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Sprites/ball.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Ball.gd" type="Script" id=2]
[ext_resource path="res://Assets/Shaders/Ball.shader" type="Shader" id=3]
[ext_resource path="res://Assets/Sprites/ball_highlight.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sounds/David Stearns - Platformer SFX/Hit 2.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sounds/David Stearns - Platformer SFX/Explosion with Ricochet.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/David Stearns - Platformer SFX/Coin Total Win 2.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sounds/David Stearns - Platformer SFX/Jump 4.wav" type="AudioStream" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/outline_width = 22.0
shader_param/outline_color = Color( 0, 0, 0, 1 )
shader_param/use_8way_kernel = true
shader_param/normalize_outline = true

[sub_resource type="CircleShape2D" id=2]
radius = 3.0

[sub_resource type="CircleShape2D" id=3]
radius = 3.0

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/outline_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.890196, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Curve" id=5]
max_value = 0.04
_data = [ Vector2( 0, 0.04 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="Ball" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." groups=[
"player_sprite",
]]
material = SubResource( 1 )
position = Vector2( 0, 4.76837e-07 )
scale = Vector2( 0.046875, 0.046875 )
texture = ExtResource( 1 )

[node name="Highlight" type="Sprite" parent="." groups=[
"player_sprite",
]]
position = Vector2( -1, -1 )
scale = Vector2( 0.0234375, 0.0234375 )
texture = ExtResource( 4 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Effector" type="Area2D" parent="."]
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="Effector"]
shape = SubResource( 3 )

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2( -3, 0 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2( 3, 0 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dash = SubResource( 4 )

[node name="DeathParticle" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 2.0
one_shot = true
explosiveness = 1.0
local_coords = false
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 200 )
initial_velocity = 160.0
initial_velocity_random = 0.5
scale_amount_curve = SubResource( 5 )

[node name="Sounds" type="Node2D" parent="."]

[node name="Jump" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )
bus = "SFX"

[node name="Bump" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
bus = "SFX"

[node name="Die" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )
bus = "SFX"

[node name="Finish" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )
bus = "SFX"

[node name="EnterWater" type="AudioStreamPlayer" parent="Sounds"]
bus = "SFX"

[node name="ExitWater" type="AudioStreamPlayer" parent="Sounds"]
bus = "SFX"
[connection signal="body_entered" from="Effector" to="." method="_on_Effector_body_entered"]
[connection signal="body_exited" from="Effector" to="." method="_on_Effector_body_exited"]
